# build_toolkit

./: README.md
cmake/: __auxiliary.cmake  init.cmake  service.cmake
cmake/project/: general_settings.cmake  libs_functions.cmake  libs_functions_qt.cmake  target_functions.cmake
cmake/project/cpp_tools/dev_tools/: CMakeLists.txt
cmake/project/cpp_tools/lib_additional/: CMakeLists.txt
cmake/project/cpp_tools/lib_additional_qt/: CMakeLists.txt
cmake/service/: details.cmake  service.cmake
